--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "6.1-blog-api-project",
+  "name": "blogging-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+    "start": "node server.js",
+    "api": "node index.js"
   },
   "keywords": [],
   "author": "",
