--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "api": "node index.js"
+    "start": "node index.js",
+    "api": "node server.js"
   },
   "keywords": [],
   "author": "",
