--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/posts.*", "dest": "/index.js" },
+    { "src": "/api/.*", "dest": "/index.js" },
     { "src": ".*", "dest": "/server.js" }
   ]
 }
